@@ -25,7 +25,6 @@ public final class KeyUtils {
     private static final String  PUBLICKEY =  "MIGHAoGBALZrtub6dr1iEJ+JZhlTvH730yS0xb16XyyN36/QAS22H3k2H/p/tbNz\n3J3Cy44lK7w4oNadOwRgITjDInhmbDqcKlFiI7XPCC351EubsgiF1yOwjVKMsvKm\n1OgknVpvYTd2roKTWJ8yknfqWPxwsAUspGpbx51Jt/zuYXLFhlj/AgED";
     private static final String  PRIVATE_KEY = "MIICWwIBAAKBgQC2a7bm+na9YhCfiWYZU7x+99MktMW9el8sjd+v0AEtth95Nh/6\nf7Wzc9ydwsuOJSu8OKDWnTsEYCE4wyJ4Zmw6nCpRYiO1zwgt+dRLm7IIhdcjsI1S\njLLyptToJJ1ab2E3dq6Ck1ifMpJ36lj8cLAFLKRqW8edSbf87mFyxYZY/wIBAwKB\ngHmdJJn8TyjsCxUGRBDifan6jMMjLn5RlMhelR/gAMkkFPt5aqb/zneikxPXMl7D\ncn17FeRo0gLqwNCCFvru8tCcvtCCbgkwre72cGuL/ggN0MvLFQZGwr3tCmhWSAGJ\nnSyg3zzqyiUay1FTqBDNqGmlXyLwIcCzqqQVJlcBmv87AkEA5grvj0F75uSHzzOn\n90FSim17VXWNVzr7iSerg6nAFnrTqk/dOe0/KYQ1O9gi1ZWvPPFdpI+YRbCfZaOi\nBpI6PQJBAMsBKQ89LB8ev7j4AlJzqeawdqp4O8tT2jodoB+HmAp6oNsPyfk8KGDd\nSLEEwGadt3ekWE8FY/aHZ2kETjyLn+sCQQCZXJ+01lKZ7a/fd8VPgOGxnlI4+Qjk\n0f0GGnJXxoAO/I0cNT4mniobrXjSkBc5DnTTS5PDCmWDyxTubRavDCbTAkEAh1Yb\nX34dahR/0KVW4aJxRHWkcaV9Mjfm0WkValplXFHAkgqGpiga6z4wdgMq7xPPpRg6\n31jtTwTvm1g0KF0VRwJAY0rj3NWey/4apiEdrNV143w83iQtFTDliKXB8voAxk6y\npZkunO7IzRcbnC2+132e0/G9LdLGbVqgHO4i2leMYw==";
 
-
     private KeyUtils() {}
 
     /**
@@ -33,11 +32,8 @@ public final class KeyUtils {
      */
     public static void pemKey2DerKey() {
         try {
-            PrivateKey privateKey = KeyUtils.getFromPemPrivateKey(PRIVATE_KEY);
-            PublicKey publicKey = KeyUtils.getFromPemPublicKey(PUBLICKEY);
-
-            String der_publicKey = new String(Base64.encodeBase64(publicKey.getEncoded()));
-            String der_privateKey = new String(Base64.encodeBase64(privateKey.getEncoded()));
+            String der_publicKey = pemPublicKey2derPublicKey(PUBLICKEY);
+            String der_privateKey = pemPrivateKey2derPrivateKey(PRIVATE_KEY);
 
             //这就是JAVA端的DER公钥与私钥
             System.out.println(der_publicKey + "   " + der_privateKey);
@@ -47,36 +43,40 @@ public final class KeyUtils {
     }
 
     /**
-     * 转换PEM公钥
-     * @param public_key
-     * @return
-     * @throws Exception
+     * pem格式的privateKey转der格式的privateKey
+     * @param pemPriKey 将openssl生成的pem key转成java的der格式的key,  将 -----BEGIN RSA PUBLIC KEY-----\n 与结尾去除即可
      */
-    public static PublicKey getFromPemPublicKey(String public_key) throws Exception {
-        byte[] keyBytes = new sun.misc.BASE64Decoder().decodeBuffer(public_key);
-        ASN1InputStream in = new ASN1InputStream(keyBytes);
-        DERObject obj = in.readObject();
-        RSAPublicKeyStructure pStruct = RSAPublicKeyStructure.getInstance(obj);
-        RSAPublicKeySpec spec = new RSAPublicKeySpec(pStruct.getModulus(), pStruct.getPublicExponent());
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return kf.generatePublic(spec);
+    public static String pemPrivateKey2derPrivateKey(String pemPriKey) {
+        try {
+            ASN1InputStream in = new ASN1InputStream(Base64.decode2(pemPriKey));
+            DERObject obj = in.readObject();
+            RSAPrivateKeyStructure pStruct = RSAPrivateKeyStructure.getInstance(obj);
+            RSAPrivateKeySpec spec = new RSAPrivateKeySpec(pStruct.getModulus(), pStruct.getPrivateExponent());
+            PrivateKey privateKey = KeyFactory.getInstance("RSA").generatePrivate(spec);
+            in.close();
+            return new String(Base64.encodeBase64(privateKey.getEncoded()));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
     /**
-     * 转换PEM私钥成
-     * @param pri_key
-     * @return
-     * @throws Exception
+     * pem格式的publicKey转der格式的publicKey
+     * @param pemPubKey 将openssl生成的pem key转成java的der格式的key,  将 -----BEGIN RSA PUBLIC KEY-----\n 与结尾去除即可
      */
-
-    public static PrivateKey getFromPemPrivateKey(String pri_key) throws Exception {
-        byte[] keyBytes = new sun.misc.BASE64Decoder().decodeBuffer(pri_key);
-        ASN1InputStream in = new ASN1InputStream(keyBytes);
-        DERObject obj = in.readObject();
-        RSAPrivateKeyStructure pstruct = RSAPrivateKeyStructure.getInstance(obj);
-        RSAPrivateKeySpec spec = new RSAPrivateKeySpec(pstruct.getModulus(), pstruct.getPrivateExponent());
-        KeyFactory kf = KeyFactory.getInstance("RSA");
-        return kf.generatePrivate(spec);
+    public static String pemPublicKey2derPublicKey(String pemPubKey) {
+        try {
+            ASN1InputStream in = new ASN1InputStream(Base64.decode2(pemPubKey));
+            DERObject obj = in.readObject();
+            RSAPublicKeyStructure pStruct = RSAPublicKeyStructure.getInstance(obj);
+            RSAPublicKeySpec spec = new RSAPublicKeySpec(pStruct.getModulus(), pStruct.getPublicExponent());
+            PublicKey publicKey = KeyFactory.getInstance("RSA").generatePublic(spec);
+            in.close();
+            return new String(Base64.encodeBase64(publicKey.getEncoded()));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
-
 }
